# claudes-wisdom

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  MEMORY.md  README.md  pyproject.toml
docs/: HOW_TO_USE.md
src/wisdom/: __init__.py  config.py  exceptions.py  logging_config.py
src/wisdom/cli/: __init__.py  analytics_cmds.py  app.py  experience_cmds.py  formatters.py  io_cmds.py  knowledge_cmds.py  query_cmds.py  wisdom_cmds.py
src/wisdom/engine/: __init__.py  adversarial.py  coverage.py  evolution.py  experience_engine.py  gap_analysis.py  knowledge_engine.py  lifecycle.py  meta_learning.py  propagation.py  retrieval.py  triggers.py  validation.py  wisdom_engine.py
src/wisdom/llm/: __init__.py  extraction.py  injection.py  prompts.py  provider.py  synthesis.py
src/wisdom/llm/providers/: anthropic.py  ollama.py  openai_provider.py
src/wisdom/mcp_server/: __init__.py  __main__.py  lifespan.py  server.py
src/wisdom/models/: __init__.py  common.py  experience.py  knowledge.py  wisdom.py
src/wisdom/seeds/: __init__.py  communication.yaml  debugging.yaml  meta.yaml  software_engineering.yaml
src/wisdom/storage/: __init__.py  base.py  sqlite_store.py  vector_store.py
tests/: __init__.py  conftest.py  test_cli.py  test_engines.py  test_evolution.py  test_mcp.py  test_meta_learning.py  test_models.py  test_retrieval.py  test_storage.py  test_trust.py
