[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wisdom-system"
version = "0.1.0"
description = "CLI Wisdom System — accumulate, retain, and apply wisdom through the DIKW hierarchy"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.18",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
    "ollama>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
all = ["wisdom-system[mcp,llm,dev]"]

[project.scripts]
wisdom = "wisdom.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wisdom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
